@@ -1,3 +1,6 @@
+//STUDENT NAME: Chia-Yu Liu //
+//STUDENT ID: 100698737     //
+
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Scanner;
